--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,5 +1,4 @@
 name: テスト用
-
 on:
   repository_dispatch:
   workflow_dispatch:
@@ -8,52 +7,214 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  push:
-    branches:
-      - master
-    paths:
-      - 'test.config'
   # schedule:
     # - cron: 0 0 * * 5
-  # release:
-    # types: [published]
-  # watch:
-    # types: started
-
+  watch:
+    types: started
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: KamiWrt.config
-  DIY_P1_SH: diy-before-feed.sh
-  DIY_P2_SH: diy-after-feed.sh
-  UPLOAD_PACKAGES_DIR: true
+  CONFIG_FILE: Test.config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_TO_ARTIFACTS: false
-  UPLOAD_TO_REALEASE: true
+  UPLOAD_PACKAGES: false
+  UPLOAD_RELEASE: true
+  UPLOAD_ARTIFACTS: false
   TELEGRAM_NOTIFICATION: true
-  WECHAT_NOTIFICATION: false
   DELETE_OLD_REALEASE: true
   TZ: Asia/Shanghai
 
 jobs:
   build:
     if: github.event.repository.owner.id == github.event.sender.id
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
 
-    - name: 通过SSH连接到Actions
+    - name: Get Current Time
+      id: date
+      run: |
+        echo "START_SECOND=$(date +"%s")" >> $GITHUB_ENV
+    
+    - name: Initialization environment
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
+    - name: Clone source code
+      working-directory: /workdir
+      run: |
+        df -hT $PWD
+        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+    - name: Load custom feeds
+      run: |
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        chmod +x $DIY_P1_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P1_SH
+    - name: Update feeds
+      run: cd openwrt && ./scripts/feeds update -a
+
+    - name: Install feeds
+      run: cd openwrt && ./scripts/feeds install -a
+
+    - name: Load custom configuration
+      run: |
+        [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x $DIY_P2_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+    - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+
+    - name: Download package
+      id: package
+      run: |
+        cd openwrt
+        make defconfig
+        make download -j8
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
+    - name: Compile the firmware
+      id: compile
+      run: |
+        cd openwrt
+        echo -e "$(nproc) thread compile"
+        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo "::set-output name=status::success"
+        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=$(cat DEVICE_NAME)" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+    - name: Check space usage
+      if: (!cancelled())
+      run: df -hT
+
+    - name: Upload bin directory
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: OpenWrt_bin_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
+        path: openwrt/bin
+
+    - name: Organize files
+      id: organize
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      run: |
+        mkdir openwrt/firmware
+        ls openwrt/bin/targets/*/*/
+        ls openwrt/bin/targets/*/*/*
+        find openwrt/bin/targets/*/*/* -maxdepth 0 -name "*combined.img.gz" | xargs -i mv -f {} ./openwrt/firmware/
+        find openwrt/bin/targets/*/*/* -maxdepth 0 -name "config*" | xargs -i mv -f {} ./openwrt/firmware/
+        cd openwrt/firmware
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+    - name: Pack packages folder
+      id: pack
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_PACKAGES == 'true'
+      run: |
+        cd openwrt/bin/packages/
+        tar -cvf KamiWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar ./
+        gzip KamiWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar
+        mv *.tar.gz ..
+        echo "::set-output name=status::success"
+    - name: Upload firmware to artifact
+      uses: actions/upload-artifact@main
+      if: env.UPLOAD_ARTIFACTS == 'true' && steps.organize.outputs.status == 'success' && !cancelled()
+      with:
+        name: KamiWrt_firmware_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
+        path: ${{ env.FIRMWARE }}
     
-    - name: 移除workflow运行
+    - name: Upload packages to artifact
+      uses: actions/upload-artifact@main
+      if: env.UPLOAD_PACKAGES == 'true' && env.UPLOAD_ARTIFACTS == 'true' && steps.pack.outputs.status == 'success' && !cancelled()
+      with:
+        name: KamiWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
+        path: openwrt/bin/packages
+
+    - name: Generate release tag
+      id: tag
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      run: |
+        echo "::set-output name=release_tag::Main_$(date +"%Y.%m.%d-%H%M")"
+        touch release.txt
+        echo "::set-output name=status::success"
+    - name: Upload firmware to release
+      uses: softprops/action-gh-release@v1
+      if: env.UPLOAD_RELEASE == 'true' && steps.tag.outputs.status == 'success' && !cancelled()
+      env:
+        GITHUB_TOKEN: ${{ secrets.KAMI_TOKEN }}
+      with:
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        body_path: release.txt
+        files: ${{ env.FIRMWARE }}/*
+    
+    - name: Upload packages to release
+      uses: softprops/action-gh-release@v1
+      if: env.UPLOAD_PACKAGES == 'true' && env.UPLOAD_RELEASE == 'true' && steps.tag.outputs.status == 'success' && !cancelled()
+      env:
+        GITHUB_TOKEN: ${{ secrets.KAMI_TOKEN }}
+      with:
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        body_path: release.txt
+        files: openwrt/bin/KamiWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz
+
+    - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
-        keep_minimum_runs: 3
+        keep_minimum_runs: 11
+
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.1.0
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      with:
+        keep_latest: 10
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.KAMI_TOKEN }}
+    
+    - name: Get compile time
+      id: length
+      run: |
+        timeLength=$[$(date +"%s")-${{env.START_SECOND}}]
+        timeHour=$[$timeLength/3600]
+        timeMin=$[($timeLength-$timeHour*3600)/60]
+        echo "TIME_HOUR=$timeHour" >> $GITHUB_ENV
+        echo "TIME_MIN=$timeMin" >> $GITHUB_ENV
+    - name: Telegram notification
+      if: steps.compile.outputs.status == 'success' && env.TELEGRAM_NOTIFICATION == 'true' && !cancelled()
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        format: html
+        message: |
+          <b>✅ KamiWrtコンパイル完了！</b>
+          時間：${{env.TIME_HOUR}}時${{env.TIME_MIN}}分
+    - name: Telegram notification when fail
+      if: steps.compile.outputs.status != 'success' && env.TELEGRAM_NOTIFICATION == 'true' && !cancelled()
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        format: html
+        message: |
+          <b>❌ KamiWrtコンパイルに失敗！</b>
